Auto stash before merge of "master" and "origin/master"

--- a/includes/style/style.css
+++ b/includes/style/style.css
@@ -279,6 +279,11 @@ img {
 	background:white;
 }
 
+#paginacao > nav > ul > li.page-item.action > div{
+	background:gray;
+	color: black;
+}
+
 
 /* Center the loader */
 #loader {
